# serializer version: 1
# name: test_get[False]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'test history',
    'diff': dict({
      'foo': 'bar',
    }),
    'id': 'baz.2',
    'index': None,
    'method_name': <HistoryMethod.create: 'create'>,
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_get[True]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'test history',
    'diff': 'loaded',
    'id': 'baz.2',
    'index': None,
    'method_name': <HistoryMethod.create: 'create'>,
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
